<resources>
    <string name="app_name">Smart_Quiz</string>
    <string name="ms_not_found">NOT FOUND</string>
    <string name="sign_in">Sign In</string>
    <string name="start">START</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home_title">HOME</string>
    <string name="nav_quiz_title">Quiz</string>
    <string name="nav_edit_title">Edit</string>
    <string name="tx_user_name">Name：</string>
    <string name="tx_user_email">E-mail：</string>
    <string name="sign_out">Sign out</string>
    <string name="count">No</string>
    <string name="total">Total：</string>
    <string name="finish">Finish</string>
    <string name="add">Add</string>
    <string name="question">question</string>
    <string name="correct">correct</string>
    <string name="choice1">choice1</string>
    <string name="choice2">choice2</string>
    <string name="choice3">choice3</string>
    <string name="ms_ed_question">Please fill in the problem statement</string>
    <string name="ms_ed_correct">Pleace fill in the correct answer choices</string>
    <string name="ms_ed_choice">Please fill in the options other than the correct answer</string>
    <string name="title">Title</string>
    <string name="field">Field：</string>
    <string name="ms_spinner">Please select</string>
    <string name="creation">Creation</string>
    <string name="cancel">Cancel</string>
    <string name="point">point</string>
    <string name="createacount">Create Acount</string>
    <string name="result">Result</string>
    <string name="graph">Graph</string>
    <string name="answer">Answer</string>
    <string name="record">Record</string>
    <string name="good">Good</string>
    <string name="updaterank">Update Rank</string>
    <string name="userselect">User Answer</string>
    <string name="addquestion">Add Question</string>
    <string name="modification">modification</string>
</resources>