<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_menu_home"
        android:enabled="true"
        android:title="@string/nav_home_title"
        android:icon="@drawable/ic_baseline_home_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_menu_quiz_field"
        android:enabled="true"
        android:title="@string/nav_quiz_title"
        android:icon="@drawable/ic_baseline_quiz_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_menu_edit"
        android:enabled="true"
        android:title="@string/nav_edit_title"
        android:icon="@drawable/ic_baseline_create_24"
        app:showAsAction="ifRoom"/>


</menu>